--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -37,10 +37,8 @@ foreach(support IN ITEMS noi64 i64)
         shader(${a}fill.comp.h platforms/vk/shaders/fill.comp shader_binary ${d})
         shader(${a}histogram.comp.h platforms/vk/shaders/histogram.comp shader_binary ${d})
         shader(${a}prefix.comp.h platforms/vk/shaders/prefix.comp shader_binary ${d})
-        shader(${a}scatter_0_even.comp.h platforms/vk/shaders/scatter_0_even.comp shader_binary ${d})
-        shader(${a}scatter_0_odd.comp.h platforms/vk/shaders/scatter_0_odd.comp shader_binary ${d})
-        shader(${a}scatter_1_even.comp.h platforms/vk/shaders/scatter_1_even.comp shader_binary ${d})
-        shader(${a}scatter_1_odd.comp.h platforms/vk/shaders/scatter_1_odd.comp shader_binary ${d})
+        shader(${a}scatter_even.comp.h platforms/vk/shaders/scatter_even.comp shader_binary ${d})
+        shader(${a}scatter_odd.comp.h platforms/vk/shaders/scatter_odd.comp shader_binary ${d})
     endforeach()
 endforeach()
 
